// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HouseNumberField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="house_number"
      >
        Numer domu
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Numer domu"
          name="house_number"
          placeholder="Numer domu"
          value="12345678900"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podany numer mieszkania jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<HouseNumberField /> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="testId"
  label="Numer domu"
  name="house_number"
  placeholder="Numer domu"
  value=""
/>
`;

exports[`<HouseNumberField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="house_number"
      >
        HouseNumber*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="HouseNumber"
          name="house_number"
          placeholder="Numer domu*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<HouseNumberField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="house_number"
      >
        HouseNumber
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="testId"
          label="HouseNumber"
          name="house_number"
          placeholder="Numer domu"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
